# detex

./: .gitignore  CMakeLists.txt  convert.c  detex-view.c  detex.h  hdr.c  lena_etc1.ktx  misc.c  texture.c
